[gd_scene load_steps=3 format=3 uid="uid://cfta4ekrjwqy1"]

[ext_resource type="Script" path="res://Scripts/menus/mainMenu.gd" id="1_y20c5"]
[ext_resource type="Texture2D" uid="uid://ck1heogc4q2h1" path="res://Assets/UI/logo.png" id="2_2ucoi"]

[node name="mainMenu" type="CanvasLayer"]
script = ExtResource("1_y20c5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(293.75, 143.75)
scale = Vector2(1.09531, 1.09531)
texture = ExtResource("2_2ucoi")

[node name="buttonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="buttonManager"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -66.0
offset_right = -180.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="start" type="Button" parent="buttonManager/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "   Start   "

[node name="options" type="Button" parent="buttonManager/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="credits" type="Button" parent="buttonManager/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
text = "Credits"

[node name="MarginContainer2" type="MarginContainer" parent="buttonManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 452.0
offset_top = 257.0
offset_right = -45.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="quit" type="Button" parent="buttonManager/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "   Quit   "

[node name="LinkButton" type="LinkButton" parent="buttonManager"]
layout_mode = 2
offset_left = 252.0
offset_top = 301.0
offset_right = 330.0
offset_bottom = 324.0
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Feedback!"
underline = 1

[connection signal="pressed" from="buttonManager/MarginContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="buttonManager/MarginContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="buttonManager/MarginContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="buttonManager/MarginContainer2/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="buttonManager/LinkButton" to="." method="_on_link_button_pressed"]
